--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,18 @@
       <scope>test</scope>
     </dependency>
     
+    <dependency>
+    <groupId>org.hibernate.orm</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>6.4.4.Final</version>
+</dependency>
+
+<dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <version>8.3.0</version>
+</dependency>
+    
     
     <!-- Source: https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
 <dependency>
